RESOLVED FIXED122827
FileIconLoader should not be ref-counted.
https://bugs.webkit.org/show_bug.cgi?id=122827
Summary FileIconLoader should not be ref-counted.
Andreas Kling
Reported 2013-10-15 05:15:58 PDT
Yeah.
Attachments
Patch (3.24 KB, patch)
2013-10-15 05:20 PDT, Andreas Kling
koivisto: review+
Andreas Kling
Comment 1 2013-10-15 05:20:46 PDT
Antti Koivisto
Comment 2 2013-10-15 05:39:50 PDT
Comment on attachment 214249 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=214249&action=review > Source/WebCore/html/FileInputType.cpp:349 > + m_fileIconLoader = std::unique_ptr<FileIconLoader>(new FileIconLoader(*this)); make_unique?
Andreas Kling
Comment 3 2013-10-15 06:00:54 PDT
Note You need to log in before you can comment on or make changes to this bug.