FileIconLoader should not be ref-counted. <https://webkit.org/b/122827>

FileIconLoader is singly-owned by FileInputType.

Reviewed by Antti Koivisto.

Canonical link: https://commits.webkit.org/140918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157449 268f45cc-cd09-0410-ab3c-d52691b4dbfc