Source/WebCore/html/FileInputType.cpp
@@ -344,7 +344,7 @@ void FileInputType::requestIcon(const Vector<String>& paths)
     if (m_fileIconLoader)
         m_fileIconLoader->invalidate();
 
-    m_fileIconLoader = FileIconLoader::create(this);
+    m_fileIconLoader = std::make_unique<FileIconLoader>(static_cast<FileIconLoaderClient&>(*this));
 
     chrome->loadIconForFiles(paths, m_fileIconLoader.get());
 }
